# gameOfLife

./: .gitignore  CMakeLists.txt  LICENCE  README.md  launcher.sh
.github/workflows/: github-actions.yml
include/: CLIDatas.hpp  case.hpp  creationTableau.hpp  gameInfo.hpp  infoDisplay.hpp  string_traits.hpp  waiter.hpp
src/: creationTableau.cpp  main.cpp
tests/: test_CLIDatas.cpp  test_example.cpp  test_gameInfo.cpp  test_tableau.cpp
